Large overhaul, incl. switch to autobench (httperf)